the libraries corresponding to the proyect are added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.min.js"</script>
+    <script src="main.js"></script>
     <title>Patient Administration</title>
 </head>
 
 <body>
+    <h1>Administrador de pacientes</h1>
     
 </body>
 </html>
