creation of second column named CITAS

--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
                         Agregar Cita
                     </button>
                 </form>
-
-
             </div>
+
+            <div class="one-half-column">
+                <h2>CITAS</h2>
+                <div id="citas"></div>
+            </div>
+
         </div>
     </div>
     
