add function for validate and generate id with form

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                     
                     <button
                         type="button"
-                        class="u-full-width button-primary">
+                        class="u-full-width button-primary"
+                        onclick="agregarCita()">
                         Agregar Cita
                     </button>
                 </form>
