function to display appoinments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Patient Administration</title>
 </head>
 
-<body>
+<body onload="visualizarCitas()">
     <h1>Administrador de pacientes</h1>
 
     <div class="container">
@@ -70,7 +70,7 @@
 
             <div class="one-half column">
                 <h2>CITAS</h2>
-                <div id="citas"></div>
+                <div id="listadoCitas"></div>
             </div>
 
         </div>
